--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image:linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/slab.jpg);
+    background-image:linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/mateo.jpg);
     background-position: center;
     background-size: cover;
-    position: absolute;
+    position: relative;
+    transition: opacity 1s ease-in-out, background-image 1s ease-in-out;
 }
 
 nav{
-    
+    background: linear-gradient(rgba(27, 27, 27, 0.7)100%, rgba(159, 159, 163, 0.7));
+    position:fixed;
+    width: 100%;
     height: 5vh;
     display: flex;
     align-items: center;
@@ -31,7 +34,7 @@ nav img{
 
 .nav-links{
     flex: 1;
-    text-align: right;
+    text-align: center;
 }
 
 .nav-links ul li{
@@ -74,6 +77,7 @@ nav img{
     position: absolute;
     top: 50%;
     left:50% ;
+    bottom: 0%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
@@ -105,6 +109,8 @@ nav img{
     background: #979292;
     transition: 1s;
 }
+
+
 /*hiding the icons from font awesome......*/
 
 nav .fa{
@@ -117,6 +123,17 @@ nav .fa{
 @media(max-width: 700px){
     .text-box h1{
         font-size: 30px;
+    }
+
+    nav{
+        position:relative;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        padding: 2% 6%;
+        justify-content: space-between;
+        z-index: 999;
+        box-shadow: 2PX 2PX 10px 10px rgba(0, 0, 0, 0.19);
     }
 
     .nav-links{
@@ -141,7 +158,7 @@ nav .fa{
         display: block;
         color: #fff;
         cursor: pointer;
-        margin: 10px;
+        margin: 10%;
         font-size: 22px;
     }
 
@@ -153,5 +170,271 @@ nav .fa{
         padding: 35px;
 
     }
+    .course h2{
+        font-size: 20px;
+    } 
 
+}
+
+/*Coding the course*/
+.course{
+    width: 80%;
+    text-align: center;
+    margin:auto;
+    padding-top: 100px;
+}
+
+h2{
+    font-size: 32px;
+    font-weight: 600;
+}
+
+p{
+    font-size: 14px;
+    color: #777;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-weight: 300;
+}
+
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content:space-between;
+}
+
+.course-column{
+    flex-basis: 31%;
+    background: #fff3f3;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.5s;
+}
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+
+}
+
+.course-column:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.19);
+}
+
+/*-----coding the popping section---*/
+#section {
+    opacity: 0;
+    transform: translateY(20px); /* Start slightly below */
+    transition: opacity 0.5s ease, transform 0.5s ease; /* Smooth transition */
+}
+
+#section.visible {
+    opacity: 1; /* Fully visible */
+    transform: translateY(0); /* Move to original position */
+}
+
+/*coding the responsive part for the cources section*/
+@media(max-width:700px){
+    .row{
+        flex-direction: column;
+    }
+
+}
+
+/*coding the campus section*/
+
+.campus{
+    text-align: center;
+    margin: auto; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    width: 80%;
+}
+
+.campus-column{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.course-column img{
+    width: 100%;
+    display: block;
+}
+
+.layer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    transition: 0.5s;
+}
+
+.layer:hover{
+    background: rgba(4, 0, 22, 0.7);
+}
+.layer h1{
+    width: 100%;
+    color: #fff;
+    font-weight: 700;
+    position: absolute;
+    transform: translateX(-50px);
+    bottom: 0%;
+    left: 50px;
+    opacity: 0;
+    transition: 1.5s;
+}
+
+.layer:hover h1{
+    opacity: 1;
+    bottom: 49%;
+}
+
+/*coding the facilities section*/
+
+.facilities{
+    text-align: center;
+    margin: auto;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    width: 80%;
+}
+
+.facility-column{
+    flex-basis: 32px;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 5%;
+}
+
+.facility-column img{
+    border-radius: 10px;
+    width: 100%;
+}
+
+.facility-column h2{
+    margin-top: 15px;
+    text-align: left;
+}
+.facility-column p{
+    margin-top: 15px;
+    text-align: left;
+}
+
+
+/*coding the testimonies section*/
+
+.testimonies{
+    text-align: center;
+    margin: auto;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    width: 80%;
+}
+
+.testimonies-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    text-align: left;
+    margin-bottom: 5%;
+    padding: 25px;
+    background: #fff3f3;
+    cursor: pointer;
+    display: flex;
+    transition: 0.8s;
+    box-sizing: border-box;
+}
+
+.testimonies-col img{
+    border-radius: 50%;
+    height: 42px;
+    margin-left: 5px;
+    margin-right: 30px;
+    width: 35%;
+}
+
+.testimonies-col p{
+    padding: 0;
+}
+
+.testimonies-col h3{
+    margin-top: 15px;
+    text-align: left;
+   
+}
+
+.testimonies-col .fa{
+    color: #f44336;
+}
+
+.testimonies-col:hover{
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.19);
+}
+
+/*-----the responsive part of testimonies--------*/
+@media(max-width:700px){
+
+    .testimonies-col{
+        flex-direction: column;
+    }
+
+    .testimonies-col img{
+        margin-left: 0px;
+        margin-right: 15px;
+        width: 30px;
+    }
+}
+
+/*-----coding the call to action section--------*/
+
+.cta{
+    width: 80%;
+    margin: 100px auto;
+    padding: 100px 0px;
+    background-size: cover;
+    background-position: center;
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(images/complab.PNG);
+    border-radius: 10px;
+    text-align: center;
+}
+
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+}
+
+/*-----coding the responsive part of the call to action section--------*/
+
+@media(max-width:700px){
+     .cta h1{
+        font-size: 24px;
+     }
+}
+
+/*-----coding the footer section--------*/
+
+.footer{
+    text-align: center;
+    width: 100%;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+.icons .fa{
+    color: #f44336;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0 ;
 }
